// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a Grid with Items having spaces between them 1`] = `
<div
  class="grid"
>
  <div
    class="item colSpan colSpan-4 space-before-0 space-after-8"
  />
  <div
    class="item colSpan colSpan-2 space-before-10 space-after-0"
  />
</div>
`;

exports[`Render a Grid with Items in all sizes 1`] = `
<div
  class="grid"
>
  <div
    class="item colSpan colSpan-1 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-2 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-3 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-4 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-5 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-6 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-7 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-8 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-9 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-10 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-11 space-before-0 space-after-0"
  />
  <div
    class="item colSpan colSpan-12 space-before-0 space-after-0"
  />
</div>
`;

exports[`Render a Grid with Sections 1`] = `
<div
  class="grid"
>
  <div
    class="section colSpan colSpan-4 space-before-0 space-after-0"
  >
    <div
      class="item colSpan colSpan-1 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-2 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-3 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-4 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-5 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-6 space-before-0 space-after-0"
    />
  </div>
  <div
    class="section colSpan colSpan-8 space-before-0 space-after-0"
  >
    <div
      class="item colSpan colSpan-7 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-8 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-9 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-10 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-11 space-before-0 space-after-0"
    />
    <div
      class="item colSpan colSpan-12 space-before-0 space-after-0"
    />
  </div>
</div>
`;

exports[`Render a Grid with class names attached 1`] = `
<div
  class="grid test-grid"
>
  <div
    class="section test-section colSpan colSpan-12 space-before-0 space-after-0"
  >
    <div
      class="item test-item colSpan colSpan-12 space-before-0 space-after-0"
    />
  </div>
</div>
`;
